# homo-ludens

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/homo_ludens/: __init__.py  cli.py
src/homo_ludens/models/: __init__.py  game.py
src/homo_ludens/psn/: __init__.py  client.py
src/homo_ludens/recommender/: __init__.py  llm.py
src/homo_ludens/steam/: __init__.py  client.py
src/homo_ludens/storage/: __init__.py  local.py
src/homo_ludens/web/: __init__.py  app.py  i18n.py
src/homo_ludens/web/i18n/: en.json  zh.json
src/homo_ludens/web/routes/: __init__.py  chat.py  dashboard.py  library.py  settings.py  sync.py
src/homo_ludens/web/templates/: base.html  chat.html  dashboard.html  library.html  settings.html
src/homo_ludens/web/templates/partials/: chat_cleared.html  chat_error.html  chat_messages.html  chat_response.html  conversation_deleted.html  conversation_list.html  game_detail.html  game_not_found.html  game_progress.html  settings_saved.html  sync_error.html  sync_success.html
src/homo_ludens/xbox/: __init__.py  client.py
